# cs-5cards-poker-sample

./: README.md  mk.sh  pokerDeck.cs  pokerTest.cs
fastAPI/: .gitignore  README.md  ___main.py  pyproject.toml  reqirements.sh  requirements.txt
fastAPI/api/: grpcTest.sh  main.py  mkproto.sh  run.sh
fastAPI/api/config/: config.py  firebaseConfig.py
fastAPI/api/db/: aws.py  firestore.py
fastAPI/api/grpc/: poker.py
fastAPI/api/i18n/: i18n.json
fastAPI/api/models/: common.py  player.py  poker.py  profile.py
fastAPI/api/pb/: poker_pb2.py  poker_pb2.pyi  poker_pb2_grpc.py
fastAPI/api/poker/: card.py  deck.py  rule5cd.py
fastAPI/api/proto/: poker.proto
fastAPI/api/router/: apiAuth.py  apiProfile.py  apiUser.py  cloudUtil.py  firebaseAuthUtil.py  i18n.py  poker.py  routers.py
fastAPI/docker/: Dockerfile  docker-compose.yml  docker_up.sh
v1/: Deck.cs  mk.sh  pokerDeck.cs
v2/: card.cs  deck.cs  gameMaster.cs  gamePoker.cs  gameTable.cs  mk.sh  pokerTest.cs  pokerTestV2.cs  repository.cs  rulePoker.cs  rule_5poker.cs
