[tool.poetry]
name = "server"
version = "0.1.0"
description = ""
authors = ["Jaichael Ehrmantraut <wash.fuel@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.5"
uvicorn = "^0.32.1"
gunicorn = "^23.0.0"
redis = "^5.2.0"
firebase-admin = "^6.6.0"
python-dotenv = "^1.0.1"
python-dateutil = "^2.9.0.post0"
langdetect = "^1.0.9"
googletrans = "^3.0.0"
grpcio = "^1.68.0"
grpcio-tools = "^1.68.0"
grpcio-reflection = "^1.68.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
